# zugzwang

./: .editorconfig  CREDITS.md  Cargo.toml  LICENSE  README.md  justfile
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/: audio.rs  board.rs  config.rs  input.rs  main.rs  piece.rs  pieces.rs  state.rs
